--- a/src/app/entities/category/category-list/category-list.component.html
+++ b/src/app/entities/category/category-list/category-list.component.html
@@ -16,11 +16,32 @@
             <td>{{ category.name }}</td>
             <td>
                 <a [routerLink]="['/categories', category.id, 'items']">
-                    <button id="btnNavToCategoryItems"> Articulos</button>
+                    <button id="btnNavToCategoryItems" class="btn btn-secondary"> Articulos</button>
                 </a>
+                <button id="btnEditCategory" class="btn btn-secondary" [routerLink]="['/categories', category.id]"> Editar</button>
+                <button class="btn btn-secondary" id="btnDeleteCategory" data-bs-toggle="modal"
+                    data-bs-target="#askConfirmationDelete" (click)="prepareCategoryToDelete(category.id!)"> Eliminar</button>
             </td>
-            <td> <button id="btnEditCategory"> Editar</button></td>
-            <td> <button id="btnDeleteCategory"> Eliminar</button></td>
         </tr>
     </tbody>
 </table>
+
+<div class="modal fade" id="askConfirmationDelete" tabindex="-1" aria-labelledby="askConfirmationDelete"
+    aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title" id="exampleModalLabel">Confirmación de borrado</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                ¿Desea eliminar el registro seleccionado? Esta operación no puede deshacerse
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal"
+                    (click)="deleteCategory()">Eliminar</button>
+            </div>
+        </div>
+    </div>
+</div>
