--- a/src/app/entities/category/category-list/category-list.component.scss
+++ b/src/app/entities/category/category-list/category-list.component.scss
@@ -1,3 +1,19 @@
+h1{
+  font-weight: bold;
+}
+
 .imgCategory{
     width: 90px;
+}
+.btn {
+    padding: 8px 16px;
+    font-size: 14px;
+    border: none;
+    border-radius: 4px;
+    margin-left: 5px;
+    margin-right: 5px;
+    cursor: pointer;
+}
+.btn:hover{
+  background-color: #535a61;
 }
