--- a/src/app/entities/item/item-list/item-list.component.scss
+++ b/src/app/entities/item/item-list/item-list.component.scss
@@ -1,22 +1,13 @@
-  table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-bottom: 24px;
-  }
+h1{
+    font-weight: bold;
+}
+  form{
+    padding: 24px;
 
-  th,
-  td {
-      padding: 8px;
-      text-align: left;
-  }
-
-  th {
-      background-color: #f2f2f2;
-      font-weight: bold;
-  }
-
-  td {
-      border-bottom: 1px solid #ddd;
+    label{
+        margin-right: 10px;
+        font-weight: bold;
+    }
   }
 
   .imgItem {
@@ -32,11 +23,13 @@
   }
 
   .btn {
-      padding: 8px 16px;
+      margin-left: 5px;
+      margin-right: 5px;
       font-size: 14px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
+  }
+  
+  .btn-secondary:hover{
+    background-color: #535a61;
   }
 
   .btnAtras {
