--- a/src/app/entities/item/item-reactive-form/item-reactive-form.component.html
+++ b/src/app/entities/item/item-reactive-form/item-reactive-form.component.html
@@ -1,7 +1,5 @@
 <h1>Ficha de artículo</h1>
 
-{{ mode }} // {{ itemId }}
-
 <form *ngIf="itemForm"[formGroup]="itemForm!" novalidate autocomplete="off">
 
     <div class="form-group">
@@ -9,14 +7,14 @@
         <input type="number" class="form-control" id="id" formControlName="id">
     </div>
 
-    <!-- Categoria Id -->
+    <!-- Category -->
     <div class="form-group">
-        <label for="categoryId">Categoria</label>
+        <label for="categoryId">Categoria</label><br>
         <p-autoComplete formControlName="category" name="category" 
         [suggestions]="categories" (completeMethod)="getAllCategories($event)" 
-        field="name" (onSelect)="categorySelected()" (onClear)="categoryUnselected()" 
-        [forceSelection]="true" [required]="true"></p-autoComplete>
+        field="name" [forceSelection]="true"></p-autoComplete>
     </div>
+    
 
     <!-- Nombre -->
     <div class="form-group">
@@ -47,11 +45,22 @@
         <input type="number" formControlName="price" class="form-control" id="price">
     </div>
 
+    <div *ngIf="(itemForm.get('price')!.dirty && itemForm.get('price')!.errors)">
+        <small class="form-text text-danger"
+        *ngIf="itemForm.get('price')!.errors!['required']">
+            Este campo es requerido
+        </small>
+        <small class="form-text text-danger"
+        *ngIf="itemForm.get('price')!.errors!['min']">
+            El precio no puede ser menor que 0
+        </small>
+    </div>
+
     <!-- Imagen -->
     <div class="form-group">
         <label for="imagen">Imagen (base64)</label>
         <input type="file" id="image" class="form-control" (change)="includeImageInItem($event)">
-        <img *ngIf="item!.image" [src]="'data:image/jpeg;base64,' + item!.image">
+        <img *ngIf="item?.image" [src]="'data:image/jpeg;base64,' + item!.image">
     </div>
 
     <div class="buttonsForm">
