--- a/src/app/entities/item/item-reactive-form/item-reactive-form.component.html
+++ b/src/app/entities/item/item-reactive-form/item-reactive-form.component.html
@@ -67,4 +67,6 @@
         <button (click)="saveItem()" [disabled]="itemForm.invalid" class="btn btn-primary">Guardar</button>
     </div>
 
+    <p-toast></p-toast>
+
 </form>
