--- a/src/app/entities/category/category-list/category-list.component.scss
+++ b/src/app/entities/category/category-list/category-list.component.scss
@@ -6,11 +6,11 @@ h1{
     width: 90px;
 }
 .btn {
-    padding: 8px 16px;
-    font-size: 14px;
-    border: none;
-    border-radius: 4px;
-    margin-left: 5px;
-    margin-right: 5px;
-    cursor: pointer;
+  margin-left: 5px;
+  margin-right: 5px;
+  font-size: 14px;
+}
+
+.btn-add{
+  text-align: end;
 }
